--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2 col-md-1">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="logo"></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10 col-md-10">
@@ -108,7 +108,7 @@
             </div>
         </div>
         <!-- Hero End -->
-        <!-- ================ contact section start ================= -->
+        <!-- ====== contact section start ======= -->
         <section class="contact-section">
             <div class="container">
                 <div class="d-none d-sm-block mb-5 pb-4">
@@ -210,7 +210,7 @@
                 </div>
             </div>
         </section>
-        <!-- ================ contact section end ================= -->
+        <!-- ====== contact section end ==== -->
 
     </main>
     <footer>
